@@ -273,7 +273,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pUseCapture
              * @param pElement {document by default}
              */
-            this.addListener             = function(pType, pListener, pElement, pUseCapture){
+            this.add                        = function(pType, pListener, pElement, pUseCapture){
                 var lRet        = this,
                     lElement    = (pElement || window);
                 
@@ -295,14 +295,14 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pUseCapture
              * @param pElement {document by default}
              */
-            this.addOneTimeListener       = function(pType, pListener, pElement, pUseCapture){
+            this.addOneTime                 = function(pType, pListener, pElement, pUseCapture){
                 var lRet        = this,
                     lOneTime    = function (pEvent){
-                        lRet.removeListener(pType, lOneTime, pElement, pUseCapture);
+                        lRet.remove(pType, lOneTime, pElement, pUseCapture);
                         pListener(pEvent);
                     };
                 
-                this.addListener(pType, lOneTime, pElement, pUseCapture);
+                this.add(pType, lOneTime, pElement, pUseCapture);
                 
                 return lRet;
             };
@@ -315,7 +315,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pUseCapture
              * @param pElement {document by default}
              */
-            this.removeListener             = function(pType, pListener, pElement, pUseCapture){
+            this.remove                     = function(pType, pListener, pElement, pUseCapture){
                 var lRet = this;
                 
                 (pElement || window).removeEventListener(
@@ -334,8 +334,8 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pListener
              * @param pUseCapture
              */
-            this.addKeyListener          = function(pListener, pElement, pUseCapture){
-                return this.addListener('keydown', pListener, pElement, pUseCapture);
+            this.addKey                     = function(pListener, pElement, pUseCapture){
+                return this.add('keydown', pListener, pElement, pUseCapture);
             };
             
             /**
@@ -344,12 +344,12 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pListener
              * @param pUseCapture
              */
-            this.addClickListener        = function(pListener, pElement, pUseCapture){
-                return this.addListener('click', pListener, pElement, pUseCapture);
+            this.addClick                   = function(pListener, pElement, pUseCapture){
+                return this.add('click', pListener, pElement, pUseCapture);
             };
             
-            this.addContextMenuListener        = function(pListener, pElement, pUseCapture){
-                return this.addListener('contextmenu', pListener, pElement, pUseCapture);
+            this.addContextMenu             = function(pListener, pElement, pUseCapture){
+                return this.add('contextmenu', pListener, pElement, pUseCapture);
             };
             
             /**
@@ -358,8 +358,8 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pListener
              * @param pUseCapture
              */
-            this.addErrorListener        = function(pListener, pElement, pUseCapture){
-                return this.addListener('error', pListener, pElement, pUseCapture);
+            this.addError                   = function(pListener, pElement, pUseCapture){
+                return this.add('error', pListener, pElement, pUseCapture);
             };
             
             /**
@@ -368,7 +368,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pEventName
              * @param pKeyCode - not necessarily
              */
-            this.createEvent             = function(pEventName, pKeyCode){
+            this.create                     = function(pEventName, pKeyCode){
                 var lEvent = document.createEvent('Event');
                 
                 lEvent.initEvent(pEventName, true, true);
@@ -389,7 +389,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pKeyCode
              */
-            this.createKeyEvent          = function(pKeyCode){
+            this.createKey                  = function(pKeyCode){
                 return this.createEvent('keydown', pKeyCode);
             };
             
@@ -398,7 +398,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pKeyCode
              */
-            this.createClickEvent          = function(){
+            this.createClick                = function(){
                 return this.createEvent('click');
             };
             
@@ -407,7 +407,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pKeyCode
              */
-            this.createDblClickEvent          = function(){
+            this.createDblClick             = function(){
                 return this.createEvent('dblclick');
             };
             
@@ -416,7 +416,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pEvent
              */
-            this.dispatch                = function(pEvent, pElement){
+            this.dispatch                   = function(pEvent, pElement){
                 return (pElement || window).dispatchEvent(pEvent);
             };
             
@@ -426,7 +426,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pKeyCode
              * @param pElement
              */
-            this.dispatchKeyEvent        = function(pKeyCode, pElement){
+            this.dispatchKey                = function(pKeyCode, pElement){
                 var lEvent  = this.createKeyEvent(pKeyCode),
                     lRet    = this.dispatch(lEvent, pElement);
                 
@@ -438,7 +438,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pElement
              */
-            this.dispatchClickEvent        = function(pElement){
+            this.dispatchClick              = function(pElement){
                 var lEvent  = this.createClickEvent(),
                     lRet    = this.dispatch(lEvent, pElement);
                 
@@ -450,7 +450,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * 
              * @param pElement
              */
-            this.dispatchDblClickEvent        = function(pElement){
+            this.dispatchDblClick           = function(pElement){
                 var lEvent  = this.createDblClickEvent(),
                     lRet    = this.dispatch(lEvent, pElement);
                 
@@ -781,8 +781,8 @@ var CloudCmd, Util, DOM, CloudFunc;
                      */
                     
                     var lLoad     = function(pEvent){
-                            Events.removeListener('load', lLoad, lElement);
-                            Events.removeListener('error', lError, lElement);
+                            Events.remove('load', lLoad, lElement);
+                            Events.remove('error', lError, lElement);
                             
                             Util.exec(lFunc, pEvent);
                         },
@@ -800,8 +800,8 @@ var CloudCmd, Util, DOM, CloudFunc;
                             Util.exec(lOnError);
                         };
                     
-                    Events.addListener('load', lLoad, lElement);
-                    Events.addErrorListener(lError, lElement);
+                    Events.add('load', lLoad, lElement);
+                    Events.addError(lError, lElement);
                     
                     if(lStyle)
                         lElement.style.cssText = lStyle;
@@ -1804,8 +1804,8 @@ var CloudCmd, Util, DOM, CloudFunc;
     
     Util.extend(DOMProto, [
         DOMTree,
-        Events,
         Loader, {
+            Events  : Events,
             RESTfull: RESTfull,
             Images  : Images,
             Cache   : Cache
