@@ -308,7 +308,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         };
            
         /* добавляем обработчик клавишь */
-        DOM.addKeyListener( key_event );
+        DOM.Events.addKey( key_event );
     };
     
     CloudCmd.Menu                   = Menu;
