@@ -128,7 +128,7 @@ var CloudCmd, Util, DOM, $;
             return lRet;
         };
         
-        DOM.addKeyListener(lKeyHandler);
+        DOM.Events.addKey(lKeyHandler);
     };
     
     CloudCmd.Terminal.JqueryTerminal    = JqueryTerminal;
