@@ -153,7 +153,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         };
         
         /* добавляем обработчик клавишь */
-        DOM .addKeyListener(lKeyListener)
+        DOM .Events.addKey(lKeyListener)
             .setButtonKey('f3', lView);
     };
     
